feat: unify translated surface relations